Fix loading bar z-index

--- a/client/src/styles/components/loading-bar.scss
+++ b/client/src/styles/components/loading-bar.scss
@@ -3,4 +3,5 @@
 	background-color: #48B0B0;
 	position: fixed;
 	top: 0;
+  z-index: 102;
 }
